# octuple

./: .gitignore  .gitmodules  Cargo.toml  FUNCTIONALITY.txt  HISTORY.txt  README.md  octuple.db  octuple.pem  octuple.toml
src/: database.rs  errors.rs  key.rs  main.rs  settings.rs
src/handlers/: messages.rs  mod.rs  rooms.rs  server.rs  spaces.rs  users.rs  welcome.html
