[package]
name = "octuple"
version = "0.1.0"
edition = "2024"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
rusqlite = "0.34.0"
signature = "2.2.0"
log = "0.4.26"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem", "rand_core"] }
config = "0.15.11"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
rand = { version = "0.9.0", features = ["os_rng"] }
rmp-serde = "1.3.0"
libcharm = { version = "0.1.0", path = "../libraries/charm" }
