[package]
name = "octuple"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.28.0"
signature = "2.2.0"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem", "rand_core"] }
config = "0.15.11"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
rand = { version = "0.9.0", features = ["os_rng"] }
libcharm = { version = "0.1.0", path = "./libcharm-rs" }
serde_json = "1.0.140"
axum = { version = "0.8.4", features = ["ws", "macros"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tokio = { version = "1.34", features = ["full"] }
tower = "0.5.2"
tracing-subscriber = { version = "0.3.20", features = ["tracing-log", "tracing-serde"] }
log = "0.4.26"
bytes = "1.10.1"
lazy_static = "1.5.0"
url = "2.5.7"
